package twisk.monde;

public class SasSortie extends Activite{
    public SasSortie(){
        super("Sas Sortie", 2, 1);
    }

    @Override
    public String toC() {
        return "";
    }
}
